--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -134,19 +134,19 @@ macro(add_licensed_subdir SUBDIR TARGETS SPDX_LICENSE_IDENTIFIER WEBSITE SOURCE_
 endmacro()
 
 #                   Subdirectory       Targets      SPDX License           Informational Website                                       Source Code Origin
-add_licensed_subdir(sm4                "classic;hw" "BSD-3-Clause;OpenSSL" https://en.wikipedia.org/wiki/SM4_\(cipher\)                https://raw.githubusercontent.com/openssl/openssl/704e8090b4a789f52af07de9a3ebbe11db8e19f8/crypto/sm4/sm4.c)
+add_licensed_subdir(swDES              "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
 add_licensed_subdir(swAES              "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(swmAES             "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(rsa                "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(rsacrt             "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(sm4                "classic;hw" "BSD-3-Clause;OpenSSL" https://en.wikipedia.org/wiki/SM4_\(cipher\)                https://raw.githubusercontent.com/openssl/openssl/704e8090b4a789f52af07de9a3ebbe11db8e19f8/crypto/sm4/sm4.c)
 add_licensed_subdir(swAES256           "classic;hw" MIT                    https://github.com/ilvn/aes256                              https://github.com/ilvn/aes256.git)
 add_licensed_subdir(swAES_Ttables      "classic;hw" CC0-1.0                http://www.efgh.com/software/rijndael.htm                   http://www.efgh.com/software/rijndael.txt)
-add_licensed_subdir(swDES              "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
-add_licensed_subdir(swmAES             "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
-add_licensed_subdir(present            "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(present            "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(bignum             "classic;hw" MPL-2.0                https://www.di-mgt.com.au/bigdigits.html                    NOTFOUND)
 add_licensed_subdir(prng               "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(ecc                "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(curve25519_CortexM "classic;hw" CC0-1.0                https://munacl.cryptojedi.org/curve25519-cortexm0.shtml     https://munacl.cryptojedi.org/data/curve25519-cortexm0-20150813.tar.bz2)
-add_licensed_subdir(rsa                "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
-add_licensed_subdir(rsacrt             "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
 add_licensed_subdir(pqm4common         pqc          CC0-1.0                https://github.com/mupq/pqm4                                https://github.com/mupq/pqm4.git)
 add_licensed_subdir(dilithium          pqc          CC0-1.0                https://github.com/mupq/pqm4                                https://github.com/mupq/pqm4.git)
 add_licensed_subdir(kyber512           pqc          CC0-1.0                https://github.com/mupq/pqm4                                https://github.com/mupq/pqm4.git)
