Attribute rsa and rsacrt to Riscure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -137,8 +137,8 @@ endmacro()
 add_licensed_subdir(swDES              "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(swAES              "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(swmAES             "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
-add_licensed_subdir(rsa                "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
-add_licensed_subdir(rsacrt             "classic;hw" NOTFOUND               NOTFOUND                                                    NOTFOUND)
+add_licensed_subdir(rsa                "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
+add_licensed_subdir(rsacrt             "classic;hw" BSD-3-Clause-Clear     https://github.com/Riscure/Pinata                           https://github.com/Riscure/Pinata.git)
 add_licensed_subdir(sm4                "classic;hw" "BSD-3-Clause;OpenSSL" https://en.wikipedia.org/wiki/SM4_\(cipher\)                https://raw.githubusercontent.com/openssl/openssl/704e8090b4a789f52af07de9a3ebbe11db8e19f8/crypto/sm4/sm4.c)
 add_licensed_subdir(swAES256           "classic;hw" MIT                    https://github.com/ilvn/aes256                              https://github.com/ilvn/aes256.git)
 add_licensed_subdir(swAES_Ttables      "classic;hw" CC0-1.0                http://www.efgh.com/software/rijndael.htm                   http://www.efgh.com/software/rijndael.txt)
